# nolf1-modernizer

./: .gitignore  .gitignore.swp  azure-pipelines.yml  createrez.bat  nolf-modernizer-readme.txt  osslicenses.txt  readme.md  readme.txt
ASSETS/Attributes/: ATTACHMENTS.TXT  Jukebox.txt  LayoutNew.TXT  MODELBUTES.TXT  MUSIC.TXT  WEAPONS.TXT
ASSETS/CHARS/MODELS/: FEMBASE.ABC  GOODMAN.ABC  INTHERO_ACTION.ABC  INTHERO_ACTION.lta  INTHERO_CASUAL.abc  INTHERO_WINTER.abc  PARTNER_DANCIN.ABC
ASSETS/CHARS/MODELS/MULTI/: COSMONAUT_STYLE2_MULTI.ABC  hero_thief_multi.abc
ASSETS/CHARS/SKINS/: INTHERO_CASUAL.DTX  INTHERO_CASUAL_HEAD.DTX  INTHERO_WINTER.DTX  INTHERO_WINTER_HEAD.DTX  PARTNER_DANCIN.DTX  PARTNER_DANCIN_HEAD.DTX  hero_thief.dtx  hero_thief_head.dtx  ht.dtx
ASSETS/GUNS/SKINS_PV/: thiefhands_pv.dtx
ASSETS/INTERFACE/: ArrowBack.pcx  ArrowBackH.pcx  ArrowContinue.pcx  ArrowContinueH.pcx  GroovyGreen.pcx  PitchBlack.pcx  QuantumWhite.pcx  console.PCX
ASSETS/INTERFACE/FONTS/: FONT_AIR_Indexed.PCX  FONT_LARGE_0.xcf  FONT_LARGE_0_HD.pcx  HUD_CHOOSER.PCX  HUD_NMRS.PCX
ASSETS/MENU/SPR/: MAINMENU1b.SPR  NOLFb.SPR
ASSETS/MENU/SPRTEX/: MAINMENU1b.DTX  NOLFb.DTX
ASSETS/MUSIC/NOLFDANCE/: AMB1.SGT  AMB2.SGT  AMB3.SGT  AMB4.SGT  AMB5.SGT  AMBEND.SGT  AMBVIBES1.SGT  AMBVIBES2.SGT  AMBVIBES3.SGT  AMBVIBES4.SGT  AMBVIBES5.SGT  B3DISTORTEDORGAN.DLS  BUMPER1.SGT  BUMPER2.SGT  BUMPER3.SGT  BUMPER4.SGT  BUMPER5.SGT  ENSEMBLESTRINGS.DLS  FENDERFRETLESSWARM.DLS  HIGH1HORNHIT.SGT  HIGH2.SGT  HIGH3.SGT  HIGH4.SGT  HIGH5.SGT  HIGHBREAK.SGT  HIGHEND.SGT  HIGHINTRO.SGT  HIGHNOLEAD.SGT  HIGHTOMED.SGT  HIGHVAR.SGT  MED1.SGT  MED2.SGT  MED2TOEND.SGT  MED3.SGT  MED4.SGT  MED5.SGT  MED6.SGT  MED7.SGT  MEDEND.SGT  MEDINTRO.SGT  (+25 more)
ASSETS/TEX/OBJECTS/OBJ05/: LITHTECH.DTX  SANITYBOX.DTX
LIBS/detours/lib.X86/: detours.lib  syelog.lib
LT2/lithshared/butemgr/: ButeMgr.cpp  ButeMgr.dsp  ButeMgr.vcxproj  ButeMgr.vcxproj.filters  ButeMgrMfcDll.dsp  Stdafx.h  butemgr.h
LT2/lithshared/cryptmgr/: CryptMgr.cpp  CryptMgrMfcDll.dsp  cryptmgr.dsp  cryptmgr.h  cryptmgr.vcxproj  cryptmgr.vcxproj.filters
LT2/lithshared/gamespy/gamespyclientmgr/: GameSpyPlayer.h  GameSpyServer.h
LT2/lithshared/incs/: GameSpyClientMgr.h  GameSpyMgr.h  WonClientMgr.h  WonServerMgr.h  WonShared.h  butemgr.h  controlfilemgr.h  dibmgr.h  genregmgr.h  lith.h  lithfontdefs.h  lithtmpl.h  ltguimgr.h  mfcstub.h  redmgr.h  regmgr.h  rezmgr.h  rezmgrfull.h  stdlith.h  zlib.h  ztools.h
LT2/lithshared/incs/backup/: butemgr.h  cryptmgr.h
LT2/lithshared/libs/Debug/: GameSpyClientMgr.lib  GameSpyMgr.lib
LT2/lithshared/lith/: basehash.h  baselist.h  baselistcounter.h  dprintf.h  lithtypes.h  virtlist.h
LT2/lithshared/lithfontmgr/: lithbitmapfont.h  lithcursor.h  lithfont.h  lithfontmgr.h  lithsystemfont.h
LT2/lithshared/ltguimgr/: LTGUIBitmapCtrl.h  LTGUIScrollBarCtrl.h  ltguicolumntextctrl.h  ltguicommandhandler.h  ltguictrl.h  ltguicyclectrl.h  ltguieditctrl.h  ltguifadecolorctrl.h  ltguifadeitemctrl.h  ltguifont.h  ltguilistctrl.h  ltguimessagebox.h  ltguionoffctrl.h  ltguisliderctrl.h  ltguitextitemctrl.h
LT2/lithshared/mfcstub/: MFCStub60.dsp  MFCStub60.vcxproj  MFCStub60.vcxproj.filters  mfcs_misc.h  mfcs_rect.cpp  mfcs_rect.h  mfcs_string.cpp  mfcs_string.h  mfcs_types.h  mfcstub.cpp  mfcstub.h
LT2/lithshared/mfcstub_old/: mfcs_point.h  mfcs_rect.h  mfcs_string.h  mfcs_types.h
LT2/lithshared/stdlith/: abstractio.h  compressedio.h  copy_lists.h  dynarray.h  fileio.h  genhash.h  genlist.h  goodlinklist.h  helpers.h  l_allocator.h  linklist.h  memory.h  memoryio.h  morect.h  object_bank.h  stdlithdefs.h  stringholder.h  struct_bank.h
LT2/sdk/inc/: clientheaders.h  iaggregate.h  iclientshell.h  iltclient.h  iltcommon.h  iltcsbase.h  iltcursor.h  iltcustomdraw.h  iltdirectmusic.h  iltlightanim.h  iltmath.h  iltmessage.h  iltmodel.h  iltphysics.h  iltprelight.h  iltserver.h  iltsoundmgr.h  iltspritecontrol.h  iltstream.h  ilttexmod.h  ilttransform.h  iltvideomgr.h  iobjectplugin.h  iservershell.h  lithtech.h  ltanimtracker.h  ltassert.h  ltbasedefs.h  ltbasetypes.h  ltbbox.h  ltbeziercurve.h  ltcodes.h  ltengineobjects.cpp  ltengineobjects.h  ltlink.h  ltmatrix.h  ltplane.h  ltpvalue.h  ltquatbase.cpp  ltquatbase.h  (+6 more)
NOLF/: NOLF.dsw  NOLF.opt  NOLF.sln  UpgradeLog.htm  UpgradeLog2.htm  UpgradeLog3.htm  UpgradeLog4.htm  _after_build_debug.bat
NOLF/Backup1/: NOLF.sln
NOLF/ClientRes/: CMakeLists.txt  ClientRes.aps  ClientRes.h  ClientRes.rc  ClientRes.vcxproj
NOLF/ClientShellDLL/: BaseFolder.cpp  BaseFolder.h  BaseSelectionFolder.cpp  BitmapCtrl.cpp  BodyFX.cpp  BodyFX.h  CMakeLists.txt  CMoveMgr.cpp  CMoveMgr.h  CharacterFX.cpp  ClientInfoMgr.cpp  ClientShellDLL.dsp  ClientShellDLL.vcxproj  ClientShellDLL.vcxproj.filters  ClientUtilities.cpp  ClientUtilities.h  ConsoleMgr.cpp  ConsoleMgr.h  Credits.cpp  DetourMgr.cpp  DetourMgr.h  FolderAdvDisplay.cpp  FolderAdvDisplay.h  FolderAudio.cpp  FolderAwards.cpp  FolderBriefing.cpp  FolderCommands.h  FolderControls.cpp  FolderCrosshair.cpp  FolderCustomControls.cpp  FolderCustomLevel.cpp  FolderDisplay.cpp  FolderDisplay.h  FolderEffects.cpp  FolderGadgets.cpp  FolderGame.cpp  FolderGame.h  FolderGear.cpp  FolderHUD.cpp  FolderHUD.h  (+74 more)
NOLF/ObjectDLL/: AI.cpp  AIBrain.cpp  AIHelicopter.cpp  AIHumanState.cpp  AIHumanStrategy.cpp  AIMovement.cpp  AINudge.cpp  AIPathMgr.cpp  AISense.cpp  AIState.cpp  AISteering.cpp  AIVehicleStrategy.cpp  AnimationLex.cpp  AnimationParse.cpp  AnimationStd.h  Attachments.cpp  Body.cpp  BodyState.cpp  Breakable.cpp  CMakeLists.txt  Camera.cpp  Character.cpp  Character.h  CharacterHitBox.cpp  CharacterMgr.cpp  CinematicTrigger.cpp  ClientLightFX.cpp  CommandMgr.cpp  Controller.cpp  Destructible.cpp  Door.cpp  GameBase.cpp  GameServerShell.cpp  GameServerShell.h  KeyFramer.cpp  MusicMgr.cpp  Object.vcxproj  Object.vcxproj.filters  PlayerObj.cpp  Projectile.cpp  (+16 more)
NOLF/Shared/: ClientServerShared.h  CommandIDs.h  CommonUtilities.cpp  CommonUtilities.h  DebugNew.h  ModelButeMgr.cpp  MsgIDs.h  PlayerSummary.cpp  Stdafx.h  Timer.h  VersionMgr.cpp  VersionMgr.h
(+29 files in other folders)
